Updating travis info to hopefully work better.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,11 @@
 language: cpp
 compiler:
   - gcc
-  - clang
 before_script:
-  - "rvm use 1.8.7 && cmake . && make"
+  - rvm use 1.8.7
+  - sudo apt-get install libffi-dev
+  - cmake .
+  - make
 script: travis/run-tests.sh
 notifications:
   recipients:
