--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,9 @@ compiler:
   - gcc
 before_script:
   - rvm use 1.8.7
+  - gem install json
+  - gem install -v 2.3.1 ruby_parser
+  - gem install -v 1.2.3 parslet
   - sudo apt-get install libffi-dev
   - cmake .
   - make
