--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,11 @@
 language: cpp
 compiler:
   - gcc
+env:
+  - DEFAULT_COLLECTOR=Markcompact
+  - DEFAULT_COLLECTOR=Semispace
 before_script:
+  - rvm use 1.8.7
   - gem install json
   - gem install -v 2.3.1 ruby_parser
   - gem install -v 1.2.3 parslet
