--- a/environments/ruby/Rakefile
+++ b/environments/ruby/Rakefile
@@ -1,11 +1,3 @@
-namespace "git" do
-  desc "Update submodules"
-  task :submodules do
-    sh "git submodule init"
-    sh "git submodule update"
-  end
-end
-
 namespace "spec" do
   desc "Run simple specs"
   task :simple do
@@ -17,7 +9,7 @@ namespace "spec" do
   end
 
   desc "Run rubyspec language specs"
-  task :language => ["git:submodules"] do
+  task :language do
     sh "time mspec/bin/mspec -f specdoc :language"
   end
 end
