--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ compiler:
 env:
   - RUBY_VERSION=1.8.7 DEFAULT_COLLECTOR=Markcompact
   - RUBY_VERSION=1.8.7 DEFAULT_COLLECTOR=Semispace
-  - RUBY_VERSION=1.9.3 DEFAULT_COLLECTOR=Markcompact
+#  - RUBY_VERSION=1.9.3 DEFAULT_COLLECTOR=Markcompact
 #  - RUBY_VERSION=2.0.0 DEFAULT_COLLECTOR=Markcompact
 before_script:
   - rvm use ${RUBY_VERSION}
