--- a/environments/ruby/CMakeLists.txt
+++ b/environments/ruby/CMakeLists.txt
@@ -3,6 +3,7 @@ set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib/c9-env/rb)
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake/")
 find_package(Oniguruma REQUIRED)
 
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${LIBFFI_CFLAGS}")
 include_directories(${RUBY_INCLUDE_DIRS} ${ONIGURUMA_INCLUDE_DIRS})
 add_definitions( -DC9RB_RUBY_LIB=\"${CMAKE_CURRENT_SOURCE_DIR}/lib\" -DC9_RUBY_LIB=\"${CMAKE_SOURCE_DIR}/ruby/lib\" )
 add_library(rb SHARED
@@ -11,7 +12,7 @@ add_library(rb SHARED
     src/rb_loader.cpp
     src/rb_regexp.cpp
 )
-target_link_libraries(rb libc9 ${RUBY_LIBRARY} ${ONIGURUMA_LIBRARIES})
+target_link_libraries(rb libc9 ${RUBY_LIBRARY} ${ONIGURUMA_LIBRARIES} ${LIBFFI_LDFLAGS})
 
 add_custom_command(
     OUTPUT ${LIBRARY_OUTPUT_PATH}/rb.c9l
