--- a/src/libc9/CMakeLists.txt
+++ b/src/libc9/CMakeLists.txt
@@ -3,6 +3,10 @@ pkg_check_modules(LIBFFI REQUIRED libffi)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${LIBFFI_CFLAGS} -I${CMAKE_SOURCE_DIR}/src/pegtl/include")
 
+if(${CMAKE_CXX_COMPILER_ID} STREQUAL "GNU")
+    set_source_files_properties(environment.cpp COMPILE_FLAGS "--param inline-unit-growth=100000 --param large-function-growth=100000 --param max-inline-insns-single=100000")
+endif()
+
 add_library (libc9 SHARED
     callable_context.cpp
     context.cpp
