Properly place script files.

--- a/environments/ruby/CMakeLists.txt
+++ b/environments/ruby/CMakeLists.txt
@@ -14,6 +14,32 @@ add_library(rb SHARED
 )
 target_link_libraries(rb libc9 ${RUBY_LIBRARY} ${ONIGURUMA_LIBRARIES} ${LIBFFI_LDFLAGS})
 
+function(copy_script_files SRC DST COMMON_PATH TARGET_PREFIX) # extra args are script names.
+	foreach(FILE ${ARGN})
+		add_custom_command(
+			OUTPUT ${DST}/${COMMON_PATH}/${FILE}
+			COMMAND ${CMAKE_COMMAND} -E copy ${SRC}/${COMMON_PATH}/${FILE} ${DST}/${COMMON_PATH}/${FILE}
+			DEPENDS ${SRC}/${COMMON_PATH}/${FILE}
+		)
+		add_custom_target(${TARGET_PREFIX}-${FILE} ALL DEPENDS ${DST}/${COMMON_PATH}/${FILE})
+	endforeach()
+endfunction()
+
+copy_script_files(${CMAKE_CURRENT_SOURCE_DIR}/environment ${LIBRARY_OUTPUT_PATH} kernel/alpha rb-pkg-alpha
+	basic_hash.c9s
+	object.c9s
+	class.c9s
+	module.c9s
+	finish.c9s
+)
+
+add_custom_command(
+	OUTPUT ${LIBRARY_OUTPUT_PATH}/rb.c9l
+	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/src/rb.c9l ${LIBRARY_OUTPUT_PATH}/rb.c9l
+	DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/src/rb.c9l
+)
+add_custom_target(rb-pkg-c9l ALL DEPENDS ${LIBRARY_OUTPUT_PATH}/rb.c9l)
+
 function(add_compiled_ruby SRC DST COMMON_PATH TARGET_PREFIX) # extra args are script names.
 	foreach(FILE ${ARGN})
 		add_custom_command(
