Make environments optional.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -99,5 +99,10 @@ endfunction()
 
 file(GLOB environments "environments/*")
 foreach(environment ${environments})
-    add_subdirectory(${environment})
+    get_filename_component(environment_name ${environment} NAME)
+    string(TOUPPER ${environment_name} environment_name_upper)
+    option (ENABLE_${environment_name_upper} "Enable building the ${environment_name} environment." ON)
+    if(ENABLE_${environment_name_upper})
+        add_subdirectory(${environment})
+    endif()
 endforeach()
