--- a/src/libc9/CMakeLists.txt
+++ b/src/libc9/CMakeLists.txt
@@ -1,7 +1,7 @@
 find_package(PkgConfig REQUIRED)
 pkg_check_modules(LIBFFI REQUIRED libffi)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${LIBFFI_CFLAGS} -I${CMAKE_SOURCE_DIR}/src/pegtl/include")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${LIBFFI_CFLAGS} -I${CMAKE_SOURCE_DIR}/src/pegtl/include -I${CMAKE_CURRENT_SOURCE_DIR}")
 
 if(${CMAKE_CXX_COMPILER_ID} STREQUAL "GNU")
     set_source_files_properties(environment.cpp COMPILE_FLAGS "--param inline-unit-growth=100000 --param large-function-growth=100000 --param max-inline-insns-single=100000")
@@ -21,7 +21,8 @@ add_library (libc9 SHARED
     loader.cpp
     message.cpp
     primitive.cpp
-    script.cpp
+    script/parser.cpp
+    script/compiler.cpp
     string.cpp
     trace.cpp
     tuple.cpp
