--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,7 @@
 language: cpp
+os:
+  - osx
+  - linux
 compiler:
   - gcc
   - clang
@@ -12,9 +15,7 @@ env:
 #  - RUBY_VERSION=2.0.0 DEFAULT_COLLECTOR=Markcompact
 before_script:
   - rvm use ${RUBY_VERSION}
-  - sudo apt-get install libffi-dev
-  - sudo apt-get install libonig-dev
-  - sudo apt-get install time
+  - travis/install-deps-${TRAVIS_OS_NAME}.sh
   - cmake .
   - make
 script: travis/run-tests.sh
