--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ env:
 #  - RUBY_VERSION=1.9.3 DEFAULT_COLLECTOR=Markcompact
 #  - RUBY_VERSION=2.0.0 DEFAULT_COLLECTOR=Markcompact
 before_script:
+  - rvm install ${RUBY_VERSION}
   - rvm use ${RUBY_VERSION}
   - travis/install-deps-${TRAVIS_OS_NAME}.sh
   - cmake .
