--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,16 @@
 language: cpp
 os:
   - osx
-  - linux
+#  - linux
 compiler:
-  - gcc
+#  - gcc
   - clang
 # Right now 1.8.7 is the 'reference version'. Other versions working is good,
 # but they're a future concern, so don't bother building both collectors with
 # all versions. It is, though, a future concern I should take care of soon.
 env:
   - RUBY_VERSION=1.8.7 DEFAULT_COLLECTOR=Markcompact
-  - RUBY_VERSION=1.8.7 DEFAULT_COLLECTOR=Semispace
+#  - RUBY_VERSION=1.8.7 DEFAULT_COLLECTOR=Semispace
 #  - RUBY_VERSION=1.9.3 DEFAULT_COLLECTOR=Markcompact
 #  - RUBY_VERSION=2.0.0 DEFAULT_COLLECTOR=Markcompact
 before_script:
